--- a/spec/specrunner.html
+++ b/spec/specrunner.html
@@ -8,20 +8,24 @@
     <link rel="shortcut icon" type="image/png" href="jasmine/jasmine_favicon.png" />
     <link rel="stylesheet" type="text/css" href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css" />
 
-    <script type="text/javascript" src="../routes.js" data-cover></script>
-    <script type="text/javascript" src="../models/User.js" data-cover></script>
-    <script type="text/javascript" src="../models/Time.js" data-cover></script>
-    <script type="text/javascript" src="../models/Follower.js" data-cover></script>
+    <script type="text/javascript" src="./require.js"></script>
+    <script type="text/javascript" src="../node_modules/request/request.js"></script>
+    <script type="text/javascript" src="../node_modules/express/lib/express.js"></script>
+    <script type="text/javascript" src="../node_modules/http-errors/index.js"></script>
+    <script type="text/javascript" src="../node_modules/body-parser/index.js"></script>
+    <script type="text/javascript" src="../node_modules/express/lib/express.js"></script>
 
-    <script type="text/javascript" src="./time_test.js"></script>
-    <script type="text/javascript" src="./create-account_test.js"></script>
-
-    <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
-    
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
-    <script type="text/javascript" src="./require.js"></script>
+
+    <script type="text/javascript" src="../models/User.js" data-cover></script>
+    <script type="text/javascript" src="../models/Time.js" data-cover></script>
+    <script type="text/javascript" src="../models/Following.js" data-cover></script>
+    <script type="text/javascript" src="../routes.js" data-cover></script>
+
+    <script type="text/javascript" src="./time_test.js"></script>
+    <script type="text/javascript" src="./create-account_test.js"></script>
     
 </head>
 
